backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend   # yahi backend pod ka label hoga
  ports:
    - protocol: TCP
      port: 5000       # service port
      targetPort: 5000 # backend container port
  type: ClusterIP
