backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apex-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: iilmgsm.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apex-backend
                port:
                  number: 5000
